--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,8 @@
           <p class="text-sm">Criado por: Centro Educacional Alfa – Suyanne Gondim</p>
           <a href="mailto:suyannecarvalho97@gmail.com" class="text-blue-600 text-sm block">Contate o autor</a>
           <a href="tel:+558499172928" class="text-blue-600 text-sm block mt-1">Telefone: (84) 99172928</a>
+          <p class="text-sm"> Mossoró, 10 de abril de 2025 </p>
+
         </div>
       </div>
     </div>
